--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ a {
 
 .desktop-nav {
   display: none;
+  z-index: 50;
 }
 
 /* Jeg har tilpasset følgende skript til at passe i min portefølje
@@ -308,7 +309,7 @@ https://codepen.io/bradtraversy/pen/vMGBjQ?editors=1100 */
   top:0.8rem;
   transform: rotate(90deg);
   white-space: nowrap;
-  z-index: +1;
+  z-index: 1;
 }
 
 /* ------------------- 3D Parallax Cards ------------------- */
@@ -479,7 +480,7 @@ https://codepen.io/bradtraversy/pen/vMGBjQ?editors=1100 */
   box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.16);
   cursor:pointer;
   font-weight: 400;
-  z-index: 1;
+  z-index: 0;
 }
 
 .icon-index {
@@ -567,6 +568,33 @@ https://codepen.io/bradtraversy/pen/vMGBjQ?editors=1100 */
   bottom: 0;
   width: 100%;
   height: auto;  
+}
+
+/* OCEAN ONE */
+
+.btn-oceanone-web {
+  color: #fff;
+  background-color: #0E5E57;
+  margin-left: -9rem;
+}
+
+.section-oceanone {
+  background-color: #f6f6f6;
+}
+
+.h1-oceanone{
+  color: #0E5E57;
+  font-size: 51px;
+  padding-left: 1.5rem;
+}
+
+.oceanone-visual {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  height: auto;
 }
 
 /* Buddys */
@@ -1660,6 +1688,18 @@ footer {
     white-space: nowrap;
   }
 
+  /* ------------------- OCEAN ONE ------------------- */
+
+  .h1-oceanone{
+    font-size: 5rem;
+    padding-left: 9.5rem;
+  }
+
+  .btn-oceanone-web {
+    color: #fff;
+    margin-left: -20rem;
+  }
+
   /* ------------------- Buddys ------------------- */
 
   .h1-buddys{
@@ -1703,6 +1743,14 @@ footer {
   img.buddys-visual {
     width:60%;
     height: auto;
+  }
+
+  img.oceanone-visual {
+    width:55%;
+    height: auto;
+    right: 0;
+        left: auto;
+        transform: none;
   }
 
   .btn-fjordkroen-web {
